--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ingeniot.com.ar",
   "scripts": {
     "dev": "nuxt",
-    "devn": "nodemon api/index.js --exec babel-node",
+    "devnode": "nodemon api/index.js --exec babel-node",
     "build": "nuxt build",
     "generate": "nuxt generate",
     "start": "nuxt start"
