--- a/.env-pro
+++ b/.env-pro
@@ -7,7 +7,7 @@ API_PORT = 3001
 # MONGO Credentials
 MONGO_USERNAME = ingeniot
 MONGO_PASSWORD = ingeniot2828
-MONGO_HOST = localhost
+MONGO_HOST = mongo
 MONGO_PORT = 27017
 MONGO_DATABASE = ingeniot
 
