--- a/.env-pro
+++ b/.env-pro
@@ -28,5 +28,5 @@ AXIOS_BASE_URL = http:/3.23.116.191:3001/api
 
 #MQTT
 MQTT_PREFIX = ws://
-MQTT_HOST = 3.23.116.191
+MQTT_HOST = localhost
 MQTT_PORT = 8083
