api url correction

--- a/.env-pro
+++ b/.env-pro
@@ -24,7 +24,7 @@ EMQX_RESOURCES_DELAY = 20000
 
 ########## FRONTEND ###########
 APP_PORT = 3000
-AXIOS_BASE_URL = http:/3.23.116.191:3001/api
+AXIOS_BASE_URL = http://3.23.116.191:3001/api
 
 #MQTT
 MQTT_PREFIX = ws://
