--- a/.env-pro
+++ b/.env-pro
@@ -2,7 +2,7 @@ enviromment = pro
 
 ########## API ###########
 API_PORT = 3001
-#API_HOST = 3.23.116.191
+API_HOST = node
 
 # MONGO Credentials
 MONGO_USERNAME = ingeniot
