--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "dotenv": "^10.0.0",
     "element-ui": "^2.14.1",
     "es6-promise": "^4.1.1",
-    //"ewelink-api": "^3.1.1",
+    "ewelink-api": "^3.1.1",
     "express": "^4.17.1",
     "fuse.js": "^3.2.0",
     "google-maps": "^4.3.3",
